...
        loginButton.backgroundColor = .ypWhite
        loginButton.layer.cornerRadius = 16
        loginButton.layer.masksToBounds = true
        loginButton.tintColor = .ypBlack
        loginButton.titleLabel?.font = UIFont.boldSystemFont(ofSize: 18)
        loginButton.addTarget(self, action: #selector(didTapLoginButton), for: .touchUpInside)
        loginButton.accessibilityIdentifier = "Authenticate"
        
        //MARK: add subView and off mask
        authViewLogo.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(authViewLogo)
        loginButton.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(loginButton)
...
